preparations for RavenDB view

--- a/Views/RavenDepiction.xaml
+++ b/Views/RavenDepiction.xaml
@@ -2,9 +2,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:views="clr-namespace:Context_Processor.Views"
+        xmlns:viewModels="clr-namespace:Context_Processor.ViewModels"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Context_Processor.Views.RavenDepiction"
         Title="Context Processor">
-  <views:RavenDepictionDesign/>
+	<Design.DataContext>
+        <viewModels:RavenDepictionViewModel/>
+    </Design.DataContext>
+
+	<StackPanel>
+        <DataGrid AutoGenerateColumns="True" Items="{Binding Units}">
+        <DataGrid.Columns>
+	        <DataGridTextColumn Header="Name" 
+	                            Binding="{Binding name}" 
+	                            Width="2*" />
+	    	</DataGrid.Columns>
+        </DataGrid>
+
+    </StackPanel>
 </Window>
