--- a/Views/RavenDepiction.xaml
+++ b/Views/RavenDepiction.xaml
@@ -1,18 +1,13 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:Context_Processor.ViewModels;assembly=Context_Processor"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"        
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="800" Height="450"
         x:Class="Context_Processor.Views.RavenDepiction"
         Title="Context Processor">
-	<Design.DataContext>
-        <vm:RavenDepictionViewModel/>
-    </Design.DataContext>
-
-	<StackPanel>
-        <DataGrid AutoGenerateColumns="True" Items="{Binding Units}" />
-    </StackPanel>
+    <StackPanel>
+		<ComboBox Name="UnitsComboBox" />
+	</StackPanel>
 </Window>
 
