--- a/Views/RavenDepiction.xaml
+++ b/Views/RavenDepiction.xaml
@@ -14,12 +14,14 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
         		<ComboBox Name="UnitsComboBox" />
                 <Button Name="DeleteBtn" Width="90" Height="30" Click="DeleteUnit"/>
+                <Button Name="XMLBtn" Width="180" Height="30" Click="SaveToXML"/>
+                <Button Name="HTMLBtn" Width="180" Height="30" Click="SaveToHTML"/>
         	</StackPanel>
             <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center" Margin="10" Orientation="Vertical" Width="300" Height="670">
                     <Border Padding="15">
                       <TextBox Width="280" Height="500" AcceptsReturn="True" TextWrapping="Wrap" Name="EditTextBox" IsReadOnly="true" />
                     </Border>
-                    <Button Name="EditBtn" IsEnabled="false" Width="280" Height="30" Click="EditUnit"></Button>
+                    <Button Name="EditBtn" Width="280" Height="30" Click="EditUnit"></Button>
                 </StackPanel>
         </StackPanel>
     </ScrollViewer>
