--- a/Views/TitusView.xaml
+++ b/Views/TitusView.xaml
@@ -9,7 +9,7 @@
           <Menu DockPanel.Dock="Top">
               <MenuItem Name="DatabaseEditingMenu" Click="RavenEdit"/>
               <MenuItem Name="ConversionMenu">
-                  <MenuItem Header="RavenDB > XML"/>
+                  <MenuItem Header="RavenDB > XML" Click="RavenToXML"/>
                   <MenuItem Header="RavenDB > HTML"/>
                   <Separator />
                   <MenuItem Header="XML > HTML"/>
